--- a/website/templates/client_registration.html
+++ b/website/templates/client_registration.html
@@ -1,7 +1,7 @@
-{% extends "base.html" %} {% block title %}Sign Up{% endblock %} {% block
+{% extends "base.html" %} {% block title %}Client Registration{% endblock %} {% block
   content %}
   <form method="POST">
-    <h3 align="center">Sign Up</h3>
+    <h3 align="center">Client Registration</h3>
     <div class="form-group">
       <label for="username">Username</label>
       <input
