--- a/website/templates/client_registration.html
+++ b/website/templates/client_registration.html
@@ -33,6 +33,8 @@
       />
     </div>
     <br />
-    <button type="submit" class="btn btn-primary">Submit</button>
+    <h3 align="center">
+      <button type="submit" class="btn btn-primary">Submit</button>
+    </h3>
   </form>
   {% endblock %}
