--- a/website/templates/base.html
+++ b/website/templates/base.html
@@ -30,8 +30,8 @@
       <div class="collapse navbar-collapse" id="navbar">
         <div class="navbar-nav">
           {% if user.is_authenticated %}
-          <a class="nav-item nav-link" id="home" href="/">Home</a>
           <a class="nav-item nav-link" id="logout" href="/logout">Logout</a>
+          <a class="nav-item nav-link" id="quoteform" href="/quoteform">Fuel Quote Form</a>
           {% else %}
           <a class="nav-item nav-link" id="login" href="/login">Login</a>
           <a class="nav-item nav-link" id="client_registration" href="/client_registration">Client Registration</a>
