--- a/website/templates/quoteform.html
+++ b/website/templates/quoteform.html
@@ -2,13 +2,23 @@
     <form method="POST">
         <h3 align="center">Fuel Quote Form</h3>
         <div class="form-group">
-            <label for="gallons">Fuel Volume</label>
+            <label for="gallons">Fuel Volume (gal)</label>
                 <input
                     type="number"
                     class="form-control"
                     id="gallons"
                     name="gallons"
-                    placeholder="Enter Fuel Volume (Gallons)"
+                    placeholder="{{ gallons }}"
+                />
+        </div>
+        <div class="form-group">
+            <label for="date">Delivery Date</label>
+                <input
+                    type="date"
+                    class="form-control"
+                    id="date"
+                    name="date"
+                    placeholder="{{ date }}"
                 />
         </div>
         <div class="form-group">
@@ -18,8 +28,8 @@
                     class="form-control"
                     id="address"
                     name="address"
+                    value = "4300 Martin Luther King Blvd, Houston, TX 77204"
                     readonly
-                    placeholder=""
                 />
         </div>
         <div class="form-group">
@@ -30,7 +40,7 @@
                     id="price"
                     name="price"
                     readonly
-                    placeholder=""
+                    placeholder="{{ price }}"
                 />
         </div>
         <div class="form-group">
@@ -41,21 +51,12 @@
                     id="total"
                     name="total"
                     readonly
-                    placeholder=""
+                    placeholder="{{ total }}"
                 />
         </div>
-        <div class="form-group">
-            <label for="date">Delivery Date</label>
-                <input
-                    type="date"
-                    class="form-control"
-                    id="date"
-                    name="date"
-                />
-        </div>
+        <br />
+        <h3 align="center">
+            <button type="submit" class="btn btn-primary">Submit</button>
+        </h3>
     </form>
-    <br />
-    <h3 align="center">
-      <button type="submit" class="btn btn-primary">Submit</button>
-    </h3>
 {% endblock %}
