Fix to default page
Implemented David's solution to default page not working.

--- a/website/templates/base.html
+++ b/website/templates/base.html
@@ -33,7 +33,7 @@
           <a class="nav-item nav-link" id="home" href="/">Home</a>
           <a class="nav-item nav-link" id="logout" href="/logout">Logout</a>
           {% else %}
-          <a class="nav-item nav-link" id="login" href="/login">Login</a>
+          <a class="nav-item nav-link" id="login" href="/">Login</a>
           <a class="nav-item nav-link" id="client_registration" href="/client_registration">Client Registration</a>
           {% endif %}
         </div>
