--- a/website/templates/base.html
+++ b/website/templates/base.html
@@ -28,13 +28,18 @@
         <span class="navbar-toggler-icon"></span>
       </button>
       <div class="collapse navbar-collapse" id="navbar">
-        <div class="navbar-nav">
+        <div class="navbar-nav mr-auto">
           {% if user.is_authenticated %}
           <a class="nav-item nav-link" id="home" href="/">Home</a>
           <a class="nav-item nav-link" id="logout" href="/logout">Logout</a>
           {% else %}
           <a class="nav-item nav-link" id="login" href="/">Login</a>
           <a class="nav-item nav-link" id="client_registration" href="/client_registration">Client Registration</a>
+          {% endif %}
+        </div>
+        <div class="navbar-nav">
+          {% if user.is_authenticated %}
+          <a class="nav-item nav-link" id="logout" href="/logout">Logout</a>
           {% endif %}
         </div>
       </div>
