--- a/website/templates/history.html
+++ b/website/templates/history.html
@@ -2,7 +2,7 @@
 {% block title %}Quote History{% endblock %}
 {% block content %}
 <form method="POST">
-    <h3 align="center">Fuel Quote History</h3>
+    <h3 align="center">Fuel Quote History Order 1</h3>
     <div class="form-group">
         <label for="username">Client Name</label>
         <input
@@ -10,7 +10,7 @@
             class="form-control"
             id="full_name"
             name="full_name"
-            placeholder=""
+            placeholder="John Doe"
             readonly
         />
     </div>
@@ -21,7 +21,7 @@
             class="form-control"
             id="address"
             name="address"
-            placeholder=""
+            placeholder="123 Main St."
             readonly
         />
     </div>
@@ -32,7 +32,7 @@
             class="form-control"
             id="gallons_requested"
             name="gallons_requested"
-            placeholder=""
+            placeholder="100"
             readonly
         />
     </div>
@@ -43,7 +43,7 @@
             class="form-control"
             id="delivery_date"
             name="delivery_date"
-            value=""
+            value="3/27/24"
             readonly
         />
     </div>
@@ -54,7 +54,7 @@
             class="form-control"
             id="suggested_price"
             name="suggested_price"
-            placeholder=""
+            placeholder="5000"
             readonly
         />
     </div>
@@ -65,7 +65,7 @@
             class="form-control"
             id="total_amount_due"
             name="total_amount_due"
-            placeholder=""
+            placeholder="6500"
             readonly
         />
     </div>
@@ -75,4 +75,153 @@
         
     </h3>
 </form>
+
+<h3 align="center">Fuel Quote History Order 2</h3>
+    <div class="form-group">
+        <label for="username">Client Name</label>
+        <input
+            type="text"
+            class="form-control"
+            id="full_name"
+            name="full_name"
+            placeholder="John Doe"
+            readonly
+        />
+    </div>
+    <div class="form-group">
+        <label for="address">Address</label>
+        <input
+            type="text"
+            class="form-control"
+            id="address"
+            name="address"
+            placeholder="123 Main St."
+            readonly
+        />
+    </div>
+    <div class="form-group">
+        <label for="gallons_requested">Gallons Requested</label>
+        <input
+            type="number"
+            class="form-control"
+            id="gallons_requested"
+            name="gallons_requested"
+            placeholder="123 Main St"
+            readonly
+        />
+    </div>
+    <div class="form-group">
+        <label for="delivery_date">Delivery Date</label>
+        <input
+            type="date"
+            class="form-control"
+            id="delivery_date"
+            name="delivery_date"
+            value="3/30/24"
+            readonly
+        />
+    </div>
+    <div class="form-group">
+        <label for="suggested_price">Suggested Price</label>
+        <input
+            type="number"
+            class="form-control"
+            id="suggested_price"
+            name="suggested_price"
+            placeholder="200"
+            readonly
+        />
+    </div>
+    <div class="form-group">
+        <label for="total_amount_due">Total Amount Due</label>
+        <input
+            type="number"
+            class="form-control"
+            id="total_amount_due"
+            name="total_amount_due"
+            placeholder="400"
+            readonly
+        />
+    </div>
+    
+    <br />
+    <h3 align="center">
+        
+    </h3>
+</form>
+<h3 align="center">Fuel Quote History Order 3
+</h3>
+    <div class="form-group">
+        <label for="username">Client Name</label>
+        <input
+            type="text"
+            class="form-control"
+            id="full_name"
+            name="full_name"
+            placeholder="John Doe"
+            readonly
+        />
+    </div>
+    <div class="form-group">
+        <label for="address">Address</label>
+        <input
+            type="text"
+            class="form-control"
+            id="address"
+            name="address"
+            placeholder="123 Main St."
+            readonly
+        />
+    </div>
+    <div class="form-group">
+        <label for="gallons_requested">Gallons Requested</label>
+        <input
+            type="number"
+            class="form-control"
+            id="gallons_requested"
+            name="gallons_requested"
+            placeholder="20"
+            readonly
+        />
+    </div>
+    <div class="form-group">
+        <label for="delivery_date">Delivery Date</label>
+        <input
+            type="date"
+            class="form-control"
+            id="delivery_date"
+            name="delivery_date"
+            value="3/31/24"
+            readonly
+        />
+    </div>
+    <div class="form-group">
+        <label for="suggested_price">Suggested Price</label>
+        <input
+            type="number"
+            class="form-control"
+            id="suggested_price"
+            name="suggested_price"
+            placeholder="400"
+            readonly
+        />
+    </div>
+    <div class="form-group">
+        <label for="total_amount_due">Total Amount Due</label>
+        <input
+            type="number"
+            class="form-control"
+            id="total_amount_due"
+            name="total_amount_due"
+            placeholder="500"
+            readonly
+        />
+    </div>
+    
+    <br />
+    <h3 align="center">
+        
+    </h3>
+</form>
+
 {% endblock %}
