added tests and toml

--- a/website/templates/quoteform.html
+++ b/website/templates/quoteform.html
@@ -8,7 +8,7 @@
                     class="form-control"
                     id="gallons"
                     name="gallons"
-                    placeholder="{{ gallons }}"
+                    value="{{ gallons }}"
                 />
         </div>
         <div class="form-group">
@@ -18,7 +18,7 @@
                     class="form-control"
                     id="date"
                     name="date"
-                    placeholder="{{ date }}"
+                    value="{{ date }}"
                 />
         </div>
         <div class="form-group">
@@ -40,7 +40,8 @@
                     id="price"
                     name="price"
                     readonly
-                    placeholder="{{ price }}"
+                    value="{{ price }}"
+                    step="any"
                 />
         </div>
         <div class="form-group">
@@ -51,7 +52,8 @@
                     id="total"
                     name="total"
                     readonly
-                    placeholder="{{ total }}"
+                    value="{{ total }}"
+                    step="any"
                 />
         </div>
         <br />
