--- a/website/templates/base.html
+++ b/website/templates/base.html
@@ -32,8 +32,10 @@
           {% if user.is_authenticated %}
           <a class="nav-item nav-link" id="logout" href="/logout">Logout</a>
           <a class="nav-item nav-link" id="quoteform" href="/quoteform">Fuel Quote Form</a>
+          <a class="nav-item nav-link" id="history" href="/history">Fuel Quote Form</a>
+          <a class="nav-item nav-link" id="profile_management" href="/profile_management">Fuel Quote Form</a>
           {% else %}
-          <a class="nav-item nav-link" id="login" href="/login">Login</a>
+          <a class="nav-item nav-link" id="login" href="/">Login</a>
           <a class="nav-item nav-link" id="client_registration" href="/client_registration">Client Registration</a>
           {% endif %}
         </div>
