--- a/website/templates/profile_management.html
+++ b/website/templates/profile_management.html
@@ -7,7 +7,7 @@
 <!-- wait the placeholder should be the information that is already in the database IF the user is editing existing info -->
 
 <form method="POST">
-    <h3 aling="center">Profile Management</h3>
+    <h3 align="center">Profile Management</h3>
     <div class="form-group">
         <label for="full_name">Full Name</label>
         <input
@@ -24,7 +24,6 @@
         <label for="address1">Address</label>
         <input
             type="text"
-
             class="form-control"
             id="address1"
             name="address1"
@@ -37,7 +36,6 @@
         <label for="address2">Address</label>
         <input
             type="text"
-    
             class="form-control"
             id="address2"
             name="address2"
@@ -49,7 +47,6 @@
         <label for="city">City</label>
         <input
             type="text"
-    
             class="form-control"
             id="city"
             name="city"
@@ -130,7 +127,7 @@
             required
         />
     </div>
-    <h3 aling="center">
+    <h3 align="center">
         <button type="submit" class="btn btn-primary">Save</button>
     </h3>
 </form>
