--- a/website/templates/quoteform.html
+++ b/website/templates/quoteform.html
@@ -28,32 +28,30 @@
                     class="form-control"
                     id="address"
                     name="address"
-                    value = "4300 Martin Luther King Blvd, Houston, TX 77204"
+                    value = "{{ address }}"
                     readonly
                 />
         </div>
         <div class="form-group">
             <label for="price">Price (USD / gal)</label>
                 <input
-                    type="number"
+                    type="text"
                     class="form-control"
                     id="price"
                     name="price"
                     readonly
                     value="{{ price }}"
-                    step="any"
                 />
         </div>
         <div class="form-group">
             <label for="total">Total Amount Due (USD)</label>
                 <input
-                    type="number"
+                    type="text"
                     class="form-control"
                     id="total"
                     name="total"
                     readonly
                     value="{{ total }}"
-                    step="any"
                 />
         </div>
         <br />
