--- a/website/templates/history.html
+++ b/website/templates/history.html
@@ -1,227 +1,28 @@
 {% extends "base.html" %}
 {% block title %}Quote History{% endblock %}
 {% block content %}
-<form method="POST">
-    <h3 align="center">Fuel Quote History Order 1</h3>
-    <div class="form-group">
-        <label for="username">Client Name</label>
-        <input
-            type="text"
-            class="form-control"
-            id="full_name"
-            name="full_name"
-            placeholder="John Doe"
-            readonly
-        />
-    </div>
-    <div class="form-group">
-        <label for="address">Address</label>
-        <input
-            type="text"
-            class="form-control"
-            id="address"
-            name="address"
-            placeholder="123 Main St."
-            readonly
-        />
-    </div>
-    <div class="form-group">
-        <label for="gallons_requested">Gallons Requested</label>
-        <input
-            type="number"
-            class="form-control"
-            id="gallons_requested"
-            name="gallons_requested"
-            placeholder="100"
-            readonly
-        />
-    </div>
-    <div class="form-group">
-        <label for="delivery_date">Delivery Date</label>
-        <input
-            type="date"
-            class="form-control"
-            id="delivery_date"
-            name="delivery_date"
-            value="3/27/24"
-            readonly
-        />
-    </div>
-    <div class="form-group">
-        <label for="suggested_price">Suggested Price</label>
-        <input
-            type="number"
-            class="form-control"
-            id="suggested_price"
-            name="suggested_price"
-            placeholder="5000"
-            readonly
-        />
-    </div>
-    <div class="form-group">
-        <label for="total_amount_due">Total Amount Due</label>
-        <input
-            type="number"
-            class="form-control"
-            id="total_amount_due"
-            name="total_amount_due"
-            placeholder="6500"
-            readonly
-        />
-    </div>
+    <h1>Client's List Of Quote History's</h1>
+    <h3>Oldest to New</h3>
     
-    <br />
-    <h3 align="center">
+    <table style="border-collapse: collapse; width: 100%;">
+        <tr style="border: 1px solid #dddddd;">
+            <th style="border: 1px solid #dddddd;">Name</th>
+            <th style="border: 1px solid #dddddd;">Address</th>
+            <th style="border: 1px solid #dddddd;">Gallons Requested</th>
+            <th style="border: 1px solid #dddddd;">Delivery Date</th>
+            <th style="border: 1px solid #dddddd;">Suggested Price</th>
+            <th style="border: 1px solid #dddddd;">Total Amount Due</th>
+        </tr>
         
-    </h3>
-</form>
-
-<h3 align="center">Fuel Quote History Order 2</h3>
-    <div class="form-group">
-        <label for="username">Client Name</label>
-        <input
-            type="text"
-            class="form-control"
-            id="full_name"
-            name="full_name"
-            placeholder="John Doe"
-            readonly
-        />
-    </div>
-    <div class="form-group">
-        <label for="address">Address</label>
-        <input
-            type="text"
-            class="form-control"
-            id="address"
-            name="address"
-            placeholder="123 Main St."
-            readonly
-        />
-    </div>
-    <div class="form-group">
-        <label for="gallons_requested">Gallons Requested</label>
-        <input
-            type="number"
-            class="form-control"
-            id="gallons_requested"
-            name="gallons_requested"
-            placeholder="123 Main St"
-            readonly
-        />
-    </div>
-    <div class="form-group">
-        <label for="delivery_date">Delivery Date</label>
-        <input
-            type="date"
-            class="form-control"
-            id="delivery_date"
-            name="delivery_date"
-            value="3/30/24"
-            readonly
-        />
-    </div>
-    <div class="form-group">
-        <label for="suggested_price">Suggested Price</label>
-        <input
-            type="number"
-            class="form-control"
-            id="suggested_price"
-            name="suggested_price"
-            placeholder="200"
-            readonly
-        />
-    </div>
-    <div class="form-group">
-        <label for="total_amount_due">Total Amount Due</label>
-        <input
-            type="number"
-            class="form-control"
-            id="total_amount_due"
-            name="total_amount_due"
-            placeholder="400"
-            readonly
-        />
-    </div>
-    
-    <br />
-    <h3 align="center">
-        
-    </h3>
-</form>
-<h3 align="center">Fuel Quote History Order 3
-</h3>
-    <div class="form-group">
-        <label for="username">Client Name</label>
-        <input
-            type="text"
-            class="form-control"
-            id="full_name"
-            name="full_name"
-            placeholder="John Doe"
-            readonly
-        />
-    </div>
-    <div class="form-group">
-        <label for="address">Address</label>
-        <input
-            type="text"
-            class="form-control"
-            id="address"
-            name="address"
-            placeholder="123 Main St."
-            readonly
-        />
-    </div>
-    <div class="form-group">
-        <label for="gallons_requested">Gallons Requested</label>
-        <input
-            type="number"
-            class="form-control"
-            id="gallons_requested"
-            name="gallons_requested"
-            placeholder="20"
-            readonly
-        />
-    </div>
-    <div class="form-group">
-        <label for="delivery_date">Delivery Date</label>
-        <input
-            type="date"
-            class="form-control"
-            id="delivery_date"
-            name="delivery_date"
-            value="3/31/24"
-            readonly
-        />
-    </div>
-    <div class="form-group">
-        <label for="suggested_price">Suggested Price</label>
-        <input
-            type="number"
-            class="form-control"
-            id="suggested_price"
-            name="suggested_price"
-            placeholder="400"
-            readonly
-        />
-    </div>
-    <div class="form-group">
-        <label for="total_amount_due">Total Amount Due</label>
-        <input
-            type="number"
-            class="form-control"
-            id="total_amount_due"
-            name="total_amount_due"
-            placeholder="500"
-            readonly
-        />
-    </div>
-    
-    <br />
-    <h3 align="center">
-        
-    </h3>
-</form>
-
+        {% for quote in quotes %}
+        <tr style="border: 1px solid #dddddd;">
+            <td style="border: 1px solid #dddddd;">{{ quote.name }}</td>
+            <td style="border: 1px solid #dddddd;">{{ quote.address }}</td>
+            <td style="border: 1px solid #dddddd;">{{ quote.gallons_requested }}</td>
+            <td style="border: 1px solid #dddddd;">{{ quote.delivery_date }}</td>
+            <td style="border: 1px solid #dddddd;">{{ quote.suggested_price }}</td>
+            <td style="border: 1px solid #dddddd;">{{ quote.total_amount_due }}</td>
+        </tr>
+        {% endfor %}
+    </table>
 {% endblock %}
