--- a/website/templates/profile_management.html
+++ b/website/templates/profile_management.html
@@ -15,7 +15,7 @@
             class="form-control"
             id="full_name"
             name="full_name"
-            placeholder="Enter Full Name" 
+            placeholder="{% if user.full_name %}{{user.full_name}} {% else %}Enter Full Name {% endif %}"
             required
         />
     </div>
@@ -28,7 +28,7 @@
             class="form-control"
             id="address1"
             name="address1"
-            placeholder="Enter Address"
+            placeholder="{% if user.address1 %}{{user.address1}} {% else %}Enter Address {% endif %}"
             required 
         />
     </div>
@@ -41,7 +41,7 @@
             class="form-control"
             id="address2"
             name="address2"
-            placeholder="Enter Address 2 (Optional)"
+            placeholder="{% if user.address2 %}{{user.address2}} {% else %}Enter Address 2 (Optional) {% endif %}"
         />
     </div>
 
@@ -53,7 +53,7 @@
             class="form-control"
             id="city"
             name="city"
-            placeholder="Enter City"
+            placeholder="{% if user.address2 %}{{user.address2}} {% else %}Enter City{% endif %}"
             required
         />
     </div>
@@ -61,7 +61,8 @@
     <div class="form-group">
        <!--States go here-->
        <label for="state">State</label>
-        <select class="form-control" name="state" id="state" required>
+        <select class="form-control" name="state" id="state" required
+            placeholder="{% if user.state %}{{user.state}} {% else %}Enter State {% endif %}">
             <option value="" disabled selected>Select State</option>
             <option value="AL">Alabama</option>
             <option value="AK">Alaska</option>
@@ -83,7 +84,7 @@
             <option value="LA">Louisiana</option>
             <option value="ME">Maine</option> 
             <option value="MD">Maryland</option>
-            <option value="MA">Massachusetts</option> 20
+            <option value="MA">Massachusetts</option> 
             <option value="MI">Michigan</option>
             <option value="MN">Minnesota</option>
             <option value="MS">Mississippi</option>
@@ -104,7 +105,7 @@
             <option value="RI">Rhode Island</option>
             <option value="SC">South Carolina</option>
             <option value="SD">South Dakota</option>
-            <option value="TN">Tennessee</option> 40
+            <option value="TN">Tennessee</option> 
             <option value="TX">Texas</option>
             <option value="UT">Utah</option>
             <option value="VT">Vermont</option>
@@ -126,7 +127,7 @@
             class="form-control"
             id="zipcode"
             name="zipcode"
-            placeholder="Enter Zipcode"
+            placeholder="{% if user.zipcode %}{{user.zipcode}} {% else %}Enter Zipcode {% endif %}"
             required
         />
     </div>
