--- a/website/templates/profile_management.html
+++ b/website/templates/profile_management.html
@@ -50,7 +50,7 @@
             class="form-control"
             id="city"
             name="city"
-            placeholder="{% if user.address2 %}{{user.address2}} {% else %}Enter City{% endif %}"
+            placeholder="{% if user.city %}{{user.city}} {% else %}Enter City{% endif %}"
             
         />
     </div>
